--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,16 @@
 [package]
 name = "aster"
 version = "0.41.0"
-authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
+authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "Zach Marcantel <zmarcantel@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "A libsyntax ast builder"
 repository = "https://github.com/serde-rs/aster"
 include = ["Cargo.toml", "src/**/*.rs"]
 
 [features]
-with-syntex = ["syntex_syntax"]
 unstable-testing = ["clippy", "compiletest_rs"]
 
 [dependencies]
-syntex_syntax = { version = "0.58", optional = true }
 clippy = { version = "0.*", optional = true }
 compiletest_rs = { version = "0.2", optional = true }
 
